Add contributor details

--- a/CONTRIBUTORS/iit2024013.md
+++ b/CONTRIBUTORS/iit2024013.md
@@ -1,3 +1,4 @@
-Name: Suvanwita Das 
-GitHub: @Suvanwita
-About: Sophomore IT student
+Name: Priyanshi Giri
+GitHub: @hellopaintinghi
+About: B.Tech IT student in 4th sem 
+
