--- a/CONTRIBUTORS/MUST240048.md
+++ b/CONTRIBUTORS/MUST240048.md
@@ -1,5 +1,5 @@
 Name: Jessica Wadhwa
 
-GitHub: @jessica27272
+GitHub: https://github.com@jessica27272
 
 About: I am a 2nd year B.Tech CSE student passionate about Artificial Intelligence. I enjoy learning new technologies and contributing to open-source projects.
